# Group-34

./: AccessManager.h  Book.cpp  Book.h  Button.h  CMakeLists.txt  Database.h  Database.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Reviews.cpp  Reviews.h  User.cpp  User.h  User.json  log_in_alpha.cpp  main.cpp  textBox.h
.github/workflows/: codeql-analysis.yml  codeql.yml
jsoncpp/: x86-windows.vcpkg_abi_info.txt
jsoncpp/x86-windows-dbg/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  jsoncppConfigVersion.cmake
jsoncpp/x86-windows-dbg/include/: cmake_install.cmake
jsoncpp/x86-windows-dbg/lib/: jsoncpp.exp  jsoncpp.lib
jsoncpp/x86-windows-dbg/src/: cmake_install.cmake
jsoncpp/x86-windows-dbg/src/lib_json/: cmake_install.cmake
jsoncpp/x86-windows-rel/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  install_manifest.txt
jsoncpp/x86-windows-rel/include/: cmake_install.cmake
jsoncpp/x86-windows-rel/lib/: jsoncpp.exp  jsoncpp.lib
jsoncpp/x86-windows-rel/src/: cmake_install.cmake
jsoncpp/x86-windows-rel/src/lib_json/: cmake_install.cmake
jsoncpp/x86-windows-rel/vcpkg-parallel-configure/: .ninja_log  build.ninja
